--- a/public/index.html
+++ b/public/index.html
@@ -411,7 +411,7 @@
         });
 
         matches.forEach((match) => {
-          //console.log("match: ", match);
+          console.log("match: ", match);
 
           let newDiv = document.createElement("div");
           newDiv.style.position = "absolute";
