Greetingsseite mit letztem Heimspiel drin

--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,7 @@
         class="slide"
       >
         <div
+          id="greetingtext"
           style="
             position: absolute;
             top: 3%;
@@ -231,15 +232,30 @@
 
       function setGreeting() {
         // Begrüßung setzen
+        let lastMatch;
 
         matches.forEach((match) => {
-          if (match.formattedDate == todayAsformattedDate) todaysMatch = match;
+          if (match.formattedDate == todayAsformattedDate) {
+            todaysMatch = match;
+          }
+          if (
+            match.formattedDate < todayAsformattedDate &&
+            match.homeTeam == "TSV Bad Griesbach"
+          ) {
+            lastMatch = match;
+          }
         });
 
         if (todaysMatch) {
           document.getElementById("opponent").innerText = todaysMatch.awayTeam;
           document.getElementById("opponentLogo").src =
             todaysMatch.awayTeamImg.replace("200x200", "300x300");
+        } else {
+          document.getElementById("greetingtext").innerText =
+            "Wir begrüßten zum letzten Heimspiel den";
+          document.getElementById("opponent").innerText = lastMatch.awayTeam;
+          document.getElementById("opponentLogo").src =
+            lastMatch.awayTeamImg.replace("200x200", "300x300");
         }
       }
 
