--- a/public/index.html
+++ b/public/index.html
@@ -227,6 +227,10 @@
 
       function startSlideshow() {
         slides[0].classList.add("active");
+        if (slides[slides.length - 1]) {
+          getAllMatchDetails(matchUrls);
+        }
+
         setInterval(nextSlide, rotationTime * 1000); // alle x Sekunden zum nächsten Slide wechseln
       }
 
