--- a/public/index.html
+++ b/public/index.html
@@ -315,6 +315,32 @@
         }
       }
 
+      function getMatchData() {
+        if (matches.length == 0) {
+          fetch("/api/matches", {
+            method: "GET", // HTTP-Methode
+            headers: {
+              "Content-Type": "application/json", // Header für JSON-Daten
+            },
+            body: JSON.stringify({ urls: urls }), // Daten in JSON umwandeln
+          })
+            .then((response) => {
+              matches = responseData;
+              if (matchUrls.length == matches.length) {
+                setGreeting();
+                createMatchPages();
+                console.log("responseData", JSON.stringify(responseData));
+              } else {
+                console.log("getMatchData retry");
+                getMatchData();
+              }
+            })
+            .catch((error) => {
+              console.error("Fehler:", error);
+            });
+        }
+      }
+
       function getAllMatchDetails(urls) {
         // POST-Request senden
         if (matches.length == 0) {
@@ -323,7 +349,6 @@
             headers: {
               "Content-Type": "application/json", // Header für JSON-Daten
             },
-            body: JSON.stringify({ urls: urls }), // Daten in JSON umwandeln
           })
             .then((response) => {
               if (!response.ok) {
@@ -331,17 +356,8 @@
               }
               return response.json(); // Antwort als JSON parsen
             })
-            .then((responseData) => {
-              if (responseData.length == 0 && retries < 2) {
-                console.log("getAllMatchDetails Retry");
-                retries++;
-                getAllMatchDetails(urls);
-              } else {
-                matches = responseData;
-                console.log("responseData", JSON.stringify(responseData));
-                setGreeting();
-                createMatchPages();
-              }
+            .then(() => {
+              getMatchData();
             })
             .catch((error) => {
               console.error("Fehler:", error);
