--- a/public/index.html
+++ b/public/index.html
@@ -208,7 +208,7 @@
       let retries = 0;
       let sponsors = [];
       let tsvScorers = [];
-      let isRunning = false;
+      let intervalId;
 
       // methods
       function nextSlide() {
@@ -319,11 +319,6 @@
           matches.length < matchUrls.length
         );
 
-        if (isRunning) {
-          return;
-        }
-        isRunning = true;
-
         if (matches.length == 0 || matches.length < matchUrls.length) {
           fetch("/api/matches", {
             method: "GET", // HTTP-Methode
@@ -342,17 +337,14 @@
                 setGreeting();
                 createMatchPages();
                 setTimeout(startSlideshow, 5000);
+                clearInterval(intervalId);
                 console.log("responseData fertig", response);
-              } else {
-                console.log("getMatchData retry");
-                setTimeout(getMatchData, 5000); // 5 Sekunden warten();
               }
             })
             .catch((error) => {
               console.error("Fehler:", error);
             });
         }
-        isRunning = false;
       }
 
       function getAllMatchDetails(urls) {
@@ -666,6 +658,9 @@
       createSponsorPages();
       setTimeout(getBestTsvScorers, 3000);
       setTimeout(updateData, 5000);
+      intervalId = setInterval(function () {
+        getMatchData();
+      }, 5000);
     </script>
   </body>
   <footer>
